Correction to README.md

--- a/src/Wms/IntroductionBundle/Resources/views/index.html.twig
+++ b/src/Wms/IntroductionBundle/Resources/views/index.html.twig
@@ -381,7 +381,7 @@
 											</div>
 											<div class="excerpt_foot">					
 												<u>Code source:</u> <br>
-												<a href="https://github.com/Night75/Symfony-2-Project" target="_blank">https://github.com/Night75/<br>Symfony-2-Project</a>
+												<a href="https://github.com/Night75/MMORPG-demo-website" target="_blank">https://github.com/Night75/<br>MMORPG-demo-website</a>
 											</div>
 											<div class="excerpt_footer">
 												<span>Projet 1/2</span>
